stockstud-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: stockstud-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: stockstud
spec:
  hosts:
  - "*"
  gateways:
  - stockstud-gateway
  http:
  - match:
    - uri:
        exact: /auth
    route:
    - destination:
        host: auth
        port:
          number: 8080
